# blockchain-tourtials

./: .gitignore  LICENSE  Note.md  README.md  blockchain-require.md  ink-note.md  rust-std-node.md  substrate-crate.md  substrate-note.md  substrate-pallets.md  substrate-recipes-zh.md  substrate-tourtials.md  链下工作机(Off-chian Worker).md
advance-course/: Proof-of-Existence.md  README.md  advance-course.md  note1.md  scale_code.md  substrate-guide.md  substrate-kitties.md  substrate-macros.md  substrate-off-chain-worker.md  substrate-stotrage.md  transfaction-free-and-weight.md
advance-course/assignment-lecture4/lecture-demo/node/src/: chain_spec.rs  command.rs  service.rs
advance-course/assignment-lecture4/lecture-demo/runtime/src/: lib.rs  multiaddress.rs
advance-course/slide/: poe_advance.pptx  scale_encode.pptx  transaction_free_and_weight.pptx
advance-course/substrate-node-template-master/pallets/poe/: Cargo.toml
advance-course/substrate-node-template-master/pallets/poe/src/: lib.rs  mock.rs  tests.rs
advance-course/substrate-node-template-master/runtime/: Cargo.toml
advance-course/substrate-node-template-master/runtime/src/: lib.rs
base-course/: substrate-base.md
block-chain-theory/: SUMMARY.md  cryptography_principles_in_the_bitcoin_system.md  区块链技术与应用.md
blockchain-news/: PAPER.md  README.md
course5/: Cargo.toml
course5/src/: main.rs
erc20/: Cargo.toml  lib.rs
leveldb-rs/src/: lib.rs
node-client/: Cargo.toml
node-client/artifacts/: metadata.scale
node-client/codegen/: generate.rs
node-client/src/: main.rs
solidity/: note.md  solidity.md
substrate-knowledge-base/: README.md
substrate-knowledge-base/get-start/: getting-started-on-windows.md  installation.md  overview.md
substrate-knowledge-base/learn-substrate/: transaction-weight.md
substrate-node-template/: Cargo.toml  out.txt
substrate-node-template/node/: Cargo.toml
substrate-node-template/node/src/: command.rs  main.rs  service.rs
substrate-node-template/pallets/benchmark-demo/: Cargo.toml
substrate-node-template/pallets/benchmark-demo/src/: lib.rs
substrate-node-template/pallets/benchmarking/: Cargo.toml
substrate-node-template/pallets/benchmarking/src/: benchmark.rs  lib.rs
substrate-node-template/pallets/ibc/: Cargo.toml
substrate-node-template/pallets/ibc/src/: lib.rs
substrate-node-template/pallets/kitties/: Cargo.toml
substrate-node-template/pallets/kitties/src/: dna.rs  kitty.rs  lib.rs  mock.rs  test.rs
substrate-node-template/pallets/poe/: Cargo.toml
substrate-node-template/pallets/poe/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/pallets/sum-storage/: Cargo.toml
substrate-node-template/pallets/sum-storage/rpc/: Cargo.toml
substrate-node-template/pallets/sum-storage/rpc/src/: lib.rs
substrate-node-template/pallets/sum-storage/runtime-api/: Cargo.toml
substrate-node-template/pallets/sum-storage/runtime-api/src/: lib.rs
substrate-node-template/pallets/sum-storage/src/: lib.rs
substrate-node-template/pallets/template/src/: lib.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
substrate-recipes/: README.md
substrate-recipes/source/: substrate-hello-pallet-eng.md  substrate-hello-pallet.md  substrate-introduction.md  substrate-runtimes-apis.md  substrate-storage-map.md
(+2 files in other folders)
