[package]
name = "sum-storage-rpc"
version = "0.1.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "1.3.0"}
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
serde = {version = "1.0", features = ["derive"], optional = true}

# Substrate packages
sp-api = {version = "2.0.0", default-features = false}
sp-blockchain = {version = "2.0.0", default-features = false}
sp-runtime = {version = "2.0.0", default-features = false}


# local packages

sum-storage-runtime-api = {path = "../runtime-api", default-features = false}


[features]
default = ["std"]
std = [
    "serde",
    "sp-api/std",
    "sp-runtime/std",
    "sum-storage-runtime-api/std",
]